<resources>
    <string name="app_name">Ribbit</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username">enter your username</string>
    <string name="password">Enter password</string>
    <string name="b_sign_in">Sign in!</string>
    <string name="tv_sign_up">Or create account!</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="username_signup">Choose your usename</string>
    <string name="password_signup">Choose a solid password</string>
    <string name="email_signup">Enter your email address</string>
    <string name="signup">Sing Up Now!</string>
    <string name="title_error">Oooooops</string>
    <string name="message_error">Please complete the fields with the right information</string>
    <string name="action_logout">Logout</string>
    <string name="title_section11">Inbox</string>
    <string name="title_section22">Friends</string>
    <string name="carajo">carajo neutral</string>
    <string name="empty_list">Nothing to display!</string>
    <string name="empty_friends">No friends yet!</string>
    <string name="edit_friends">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="camera">Camera</string>
    <string name="error_access_sd">Error in trying to access SD</string>
    <string name="couldnt_craete">Couldnt create directory</string>
    <string name="coudnt_save">Couldnt save the file</string>
    <string name="video_limit">The selected video cant be longer than 10min</string>
    <string-array name="camera_choices">
        <item>Take a picture</item>
        <item>Take a video</item>
        <item>Choose a picture</item>
        <item>Choose a picture</item>
    </string-array>

</resources>
